# Code

./: .clang-format  .gitignore  .gitmodules  C Pointer Tricks.c  C programming.code-workspace  README.md  Set_Clear_Toggle_Get.c  Star patterns.c  Tree_view.md  binary_linear_search.c  bubble-sort.c  desktop.ini  tempCodeRunnerFile.c
.github/: FUNDING.yml
C Bank Management Program/: main.c
C Essentials/: Binary to Decimal and vice-versa.c  Maximizing XOR.c  Notes.c  Number of ones.c  Reverse a Bit Number.c  Reverse a Number .c  convert string nums to integer and get sum.c  copy.c  hi5hello30.c  max_number_of_bits.c  string_operations.c  tempCodeRunnerFile.c
C Note/: Binary to Decimal and vice-versa.c  Notes.c  Reverse a Number .c  std_types.h  sum with no loop.c
ITIDA-IMT/QT/QT_01_Signal_Slots/Lab_1_signal_slots/: CMakeLists.txt  destination.h  main.cpp  sourse.cpp  sourse.h
ITIDA-IMT/QT/QT_02_MemoryManagement_QSettings/Lab1_QSharedPointer_MessageManager/: CMakeLists.txt  main.cpp
Interviews/: 1.  C Code to count the number of ones in the binary of an integer number.c  1. C function to SWAP two pointers.c  10.  C function to search for an element in array using binary search both iterative and recursive &  mention time complexity.c  10. C code to swap two arrays.c  11.  C function to check if string mirror or not.c  11.  C function to get the most repeated element in an array.c  11. BinarySearch_recursion.c  12.  write a c code to swap two variables using addition and subtraction only.c  12. C function returns the average of an array.c  13.  Fibonacci series without recursion.c  14. Remove Repeated elements in an array.c  (+83 more)
(+656 files in other folders)
